// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/forms/Teamform renders correctly: Team identifier 1`] = `
<input
  className="form-control"
  disabled={true}
  id="identifier"
  name="identifier"
  onBlur={[Function]}
  onChange={[Function]}
  type="text"
  value=""
/>
`;

exports[`containers/forms/Teamform renders correctly: Team name 1`] = `
<input
  className="form-control"
  disabled={false}
  id="name"
  name="name"
  onBlur={[Function]}
  onChange={[Function]}
  type="text"
  value=""
/>
`;

exports[`containers/forms/Teamform renders fields correctly in edit mode: Id field should have value in edit mode 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -4,7 +4,7 @@
    id=\\"identifier\\"
    name=\\"identifier\\"
    onBlur={[Function anonymous]}
    onChange={[Function anonymous]}
    type=\\"text\\"
-   value=\\"\\"
+   value=\\"1\\"
  />"
`;

exports[`containers/forms/Teamform renders fields correctly in edit mode: Should not be different 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -4,7 +4,7 @@
    id=\\"name\\"
    name=\\"name\\"
    onBlur={[Function anonymous]}
    onChange={[Function anonymous]}
    type=\\"text\\"
-   value=\\"\\"
+   value=\\"User_45\\"
  />"
`;
